wacc/test/golden/syntaxErr.basic.badEscape
# program has unacceptable escape character

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  char a = '\H'
end


In test/wacc_examples/invalid/syntaxErr/basic/badEscape.wacc (line 12, column 14):
  unexpected "H"
  expected end of escape sequence
  invalid escape sequence
  >begin
  >  char a = '\H'
                ^
  >end